Add styles for the navigation

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,17 @@
 /* import fonts from fonts.css file */
 @import url(./fonts.css);
+
+.header_area .main-menu .navbar-brand {
+    padding: 0 2rem 0 5rem;
+}
+.header_area .main-menu .navbar{
+    padding: 1rem 20rem;
+}
+
+.header_area .main-menu .nav-item .nav-link{
+    font-family: 'Roboto',cursive;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 1.7em;
+    color: #000;
+}
